--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
     "homepage_url": "https://github.com/MasterOfTheTiger/reimagine-scratch",
     "manifest_version": 2,
     "permissions": [
-        "https://scratch.mit.edu/"
+        "https://scratch.mit.edu/*"
     ],
     "content_scripts": [
         {
@@ -18,6 +18,19 @@
             ],
             "js": [
                 "content.js"
+            ]
+        },
+        {
+            "run_at": "document_start",
+            "matches": [
+                "https://scratch.mit.edu/",
+                "https://scratch.mit.edu/messages"
+            ],
+            "css": [
+                "justnew.css"
+            ],
+            "js": [
+                "justnew.js"
             ]
         }
     ]
